added constrain on up and down vote
